GNOME Bugzilla – Bug 677657
Skype screen share freeze gnome-shell
Last modified: 2012-06-08 21:22:26 UTC
I'm experiencing an issue with gnome-shell and the skype "screen share" feature. It's the same documented here: https://bugs.launchpad.net/ubuntu/+source/gnome-shell/+bug/879895 and here: https://jira.skype.com/browse/SCL-809 I had a chat in IRC, GimpNet, #gnome-shell, I described the issue generating a chat among three channel members that at the end agreed this was a bug in gnome-shell. And I can confirm this is not happening with other Window Managers (like unity, metacity etc..) when a screen share start skype usually draw a red border at the edge of the screen: on gnome-shell when I initialize a screen share I can't interact with the desktop anymore: only the right click of the mouse work. Usually the Top Bar is gone. if the other user send me chat message I can interact with the desktop for a while (my guess is that gnome-shell is giving the "focus" to something else to show the notification during that period) On IRC they explained to me this is happening because gnome shell has an heuristic to unredirect (from the composite overlay window) drawing for games, to increase their performance. Apparently skype erroneously fall into that euristic and is unredirected, even if it's transparent: thus "covering" the cow, which them seems completely still. I'm no gnome expert but I think I can understand what's going on here, and I think it's a gnome-shell bug, colliding with skype behavior but to be fixed within gnome-shell. Furthermore I've read of similar issues with other softwares like recordmydesktop which exibit similar behavior. I can attach a photo of the screen I took while the system was unresponsive if you wish, but I don't think is really useful. Thanks
Created attachment 215889 [details] [review] meta-window-actor: Refactor should_unredirect a bit more "Flat is better than nested"
Created attachment 215890 [details] [review] meta-window-actor: Don't unredirect shaped windows If a window has its BoundingRegion shaped, we shouldn't unredirect it, as it expects the rest of the windows from being shown under it. This prevents applications like the Skype screen recorder or gtkRecordMyDesktop which want to show a "border" around the recorded area from being unredirected, giving the appearance of making the desktop freeze.
Review of attachment 215889 [details] [review]: Looks good.
Review of attachment 215890 [details] [review]: As discussed on IRC this one is right ... but I can't test this right now. Assuming it works find to commit. BTW. we probably should do the same for the chrome in gnome-shell? (Keep showing the chrome if the topmost window is shaped?).
(In reply to comment #4) > Review of attachment 215890 [details] [review]: > > As discussed on IRC this one is right ... but I can't test this right now. > Assuming it works find to commit. > > BTW. we probably should do the same for the chrome in gnome-shell? (Keep > showing the chrome if the topmost window is shaped?). s/find/fine/ ;)
Review of attachment 215890 [details] [review]: That opens a whole can of worms. The same can of worms that happened when we talked about hiding the chrome on non-100%-opacity-windows. I'd rather not.
(In reply to comment #6) > Review of attachment 215890 [details] [review]: > > That opens a whole can of worms. The same can of worms that happened when we > talked about hiding the chrome on non-100%-opacity-windows. I'd rather not. Good point.
So ACN?
(In reply to comment #8) > So ACN? "As discussed on IRC this one is right ... but I can't test this right now. Assuming it works fine to commit." Still applies ... the chrome comment is unrelated to the patch itself.
Attachment 215889 [details] pushed as 4041f96 - meta-window-actor: Refactor should_unredirect a bit more Attachment 215890 [details] pushed as 66eac78 - meta-window-actor: Don't unredirect shaped windows Took a little while, but I finally got it tested with this little test case I wrote: http://fpaste.org/126A/
Good, can this be backported to Gnome 3.2.x or will we have to wait for Gnome 3.4? Thanks
GNOME 3.4 is already out. And there are no more planned releases of GNOME 3.2 or GNOME 3.4.
(In reply to comment #12) > GNOME 3.4 is already out. And there are no more planned releases of GNOME 3.2 > or GNOME 3.4. We can do releases whenever we feel the need for doing it. Back porting this to 3.4 sounds reasonable.