meta-window-actor: Refactor should_unredirect a bit more

"Flat is better than nested"

https://bugzilla.gnome.org/show_bug.cgi?id=677657